@@ -14,6 +14,7 @@ body {
 }
 
 .note_frame {
+  -moz-border-radius: 5px;
   text-align: left;
   margin: 0em;
   padding: 1.5em;
